# hackathon2020-T10

./: README.md
src/back-end/: .gitignore  README.md  ecosystem.prod.config.js  package-lock.json  package.json
src/back-end/api/candidate/models/: candidate.settings.json
src/back-end/api/exam-answer/config/: routes.json
src/back-end/api/exam-answer/models/: exam-answer.settings.json
src/back-end/api/exam-check/config/: routes.json
src/back-end/api/exam-check/models/: exam-check.settings.json
src/back-end/api/exam/config/: routes.json
src/back-end/api/exam/models/: exam.settings.json
src/back-end/api/room/models/: room.settings.json
src/back-end/api/smartpen/config/: routes.json
src/back-end/api/smartpen/models/: smartpen.settings.json
src/back-end/api/token/models/: token.settings.json
src/back-end/config/: database.js  server.js
src/back-end/extensions/users-permissions/config/: jwt.js
src/back-end/extensions/users-permissions/config/policies/: permissions.js
src/back-end/extensions/users-permissions/models/: User.settings.json
src/device/: ReadMe.txt  config.ini  env.sh  start.sh
src/device/app/: CMakeLists.txt  config.c  config.h  data_process.c  data_process.h  exam.c  exam.h  exam_config.c  exam_config.h  main.c  register.c  register.h
src/device/app/bak/: auth_simulate.c  auth_simulate.h  examinee_registration.c  examinee_registration.h  examing_simulate.c  examing_simulate.h  tlv.c  tlv.h
src/device/sdk/: CMakeLists.txt  types.h
src/device/sdk/apis/: algorithm_api.c  algorithm_api.h  application_api.c  application_api.h  http_client.c  http_client.h  json_define.h  mqtt_api.c  mqtt_api.h  protocol_http.h  protocol_http_api.c  samurai_client.c  samurai_client.h  samurai_url_define.h
src/device/sdk/ecdsa/: base58.c  bignum.c  blake2b.c  ecdsa.c  groestl.c  hasher.c  hexutils.c  hexutils.h  md5.c  md5.h  options.h  rand.c  rfc6979.c  secp256k1.c  secp256k1.h  secp256k1_api.c  secp256k1_api.h
src/front-end/: .babelrc  .gitignore  ecosystem.prod.config.js  next.config.js  package-lock.json  package.json
src/front-end/components/: BackButton.js  BaseLayout.js  BlockchainStatistic.js  ExamCard.js  ExamStatistic.js  LoadingMask.js  ModalVerify.js  SmartPenStatistic.js
src/front-end/pages/: _app.js  index.js  live.js  smartpen.js  verify.js
src/front-end/pages/api/: PoEHash.js
src/front-end/services/: mqtt.js
src/front-end/styles/: Home.module.less
src/front-end/utils/: hooks.js  md5.js
src/gateway/: ca_server.py  mqtt_client.py  mqtt_client_answer.py  mqtt_client_check.py  ui_interface.py
src/gateway/PoESearch/: CMakeLists.txt
src/gateway/PoESearch/src/: config.c  config.h  main.c  poe_query.c
src/gateway/PoESearch/web_root/: config.ini  route.txt
src/gateway/PoESearch/web_root/web/: device.html  device_test.html  event.html  index.html
